Fix required indicator The asterisk indicator was not showing up, because FormItems were still using the old flex rules for nesting and diplsaying inputs. Removed the double-nesting hierarchy and it now works again

--- a/src/components/Form/FormItem/form-item.css
+++ b/src/components/Form/FormItem/form-item.css
@@ -58,22 +58,15 @@
     width       : fit-content;
 }
 
-[data-form-item][required] {
-    & > div,
-    & > [data-input-field],
-    & > [data-text-area],
-    & > [data-select-wrapper] {
-        & ~ label::after {
-            position  : absolute;
-            top       : -4px;
-            bottom    : 0;
-            right     : -12px;
-            margin    : auto;
-            content   : "*";
-            font-size : 120%;
-            color     : var(--input-required-indicator);
-        }
-    }
+[data-form-item][required] > label::after {
+    position  : absolute;
+    top       : -4px;
+    bottom    : 0;
+    right     : -12px;
+    margin    : auto;
+    content   : "*";
+    font-size : 120%;
+    color     : var(--input-required-indicator);
 }
 
 /* INPUT //////////////////////////////////////////////////////////////////// */
